@@ -1,3 +1,10 @@
+2005-10-03  Andreas Kupries <andreask@gila.activestate.com>
+
+	* me_tcl.test (ME_state): token ranks are stored in an array/dict,
+	  used dictsort to generate a canonical representation we can
+	  compare against. ... Also duplicate tokclass test depending on
+	  error message by "string is", different results in 8.4 and 8.5.
+
 2005-09-30  Andreas Kupries <andreask@activestate.com>
 
 	* me_cpucore.tcl: Fixed more typos.
